--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
-  "license": "",
+  "name": "FEC_Trip-Advisor-Reviews-Component",
+  "version": "1.0.0",
+  "description": "React components for Hack Reactor front-end capsule group project",
+  "author": "Lydia Baik",
+  "license": "ISC",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
+    "react-dev": "webpack -d --watch",
+    "start": "nodemon server",
+    "seed": "node server/scripts/seed.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "express": "^4.17.1",
+    "faker": "^5.1.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/preset-react": "^7.12.5",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "mysql-db-seed": "0.0.4",
+    "webpack": "^2.2.1"
   }
 }
