--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "start": "nodemon server",
-    "seed": "node server/scripts/seed.js"
+    "seed": "mysql -u root < ./database/schema.sql && node server/scripts/seed.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
