--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "keyword-extractor": "0.0.19",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
