--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "start": "nodemon server",
-    "seed": "mysql -u root < ./database/schema.sql && node server/scripts/seed.js"
+    "seed": "mysql -u root < ./server/database/schema.sql && node server/scripts/seedUsersAndAttractions.js && node server/scripts/seedReviews.js"
   },
+
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
