--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.12.5",
