--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sinon": "^9.2.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
