--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "start": "nodemon server",
-    "seed": "mysql -u root < ./server/database/schema.sql && node server/scripts/seedUsersAndAttractions.js && node server/scripts/seedReviews.js",
+    "seed": "mysql -u root -p < ./server/database/schema.sql && node server/scripts/seedUsersAndAttractions.js && node server/scripts/seedReviews.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -31,10 +31,9 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "webpack": "^2.2.1",
-    "@babel/preset-react": "^7.12.5",
-    "@babel/preset-env": "^7.12.1",
     "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -45,6 +44,7 @@
     "enzyme-to-json": "^3.6.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^26.6.3",
-    "mysql-db-seed": "0.0.4"
+    "mysql-db-seed": "0.0.4",
+    "webpack": "^2.2.1"
   }
 }
